# SudoDEM-Phoenix

./: .gitignore  Readme.md  sudodemcfg.h
SudoDEM2D/: CMakeLists.txt
SudoDEM2D/cMake/: LinuxDeploy.cmake  PackLinuxQt.cmake  PackMacBundle.cmake
SudoDEM2D/core/: Body.cpp  Body.hpp  BodyContainer.cpp  BodyContainer.hpp  Bound.cpp  Bound.hpp  Cell.cpp  Cell.hpp  Clump.cpp  Clump.hpp  Dispatcher.hpp  DisplayParameters.hpp  EnergyTracker.hpp  Engine.hpp  FileGenerator.cpp  FileGenerator.hpp  ForceContainer.hpp  FrontEnd.hpp  Functor.hpp  GlobalEngine.hpp  IGeom.cpp  IGeom.hpp  IPhys.cpp  IPhys.hpp  Interaction.cpp  Interaction.hpp  InteractionContainer.cpp  Material.cpp  Material.hpp  Omega.cpp  Omega.hpp  PartialEngine.hpp  Scene.cpp  Scene.hpp  Shape.cpp  Shape.hpp  SimulationFlow.cpp  SimulationFlow.hpp  State.cpp  State.hpp  (+7 more)
SudoDEM2D/core/main/: sudodem.cpp
SudoDEM2D/gui/: CMakeLists.txt  Controller.cpp  ControllerDisplay.cpp  ControllerGenerate.cpp  ControllerLayout.cpp  ControllerPython.cpp  ControllerSignals.cpp  ControllerSimulation.cpp  GLViewer.cpp  GLViewer.hpp  GLViewerDisplay.cpp  GLViewerMouse.cpp  OpenGLManager.cpp  OpenGLManager.hpp  SudoStyle.cpp  _GLViewer.cpp
SudoDEM2D/gui/qglviewer/: camera.cpp  config.h  quaternion.cpp  saveSnapshot.cpp  ui_ImageInterface.h
SudoDEM2D/lib/QGLViewer/: config.h  qglwidget_compat.h
SudoDEM2D/lib/base/: Math.cpp  Math.hpp  PluginMacros.hpp  PreprocessorUtils.hpp  Singleton.cpp  Singleton.hpp  openmp-accu.hpp
SudoDEM2D/lib/factory/: ClassRegistry.hpp  ClassRegistryInstantiation.cpp
SudoDEM2D/lib/import/: STLReader.hpp
SudoDEM2D/lib/multimethods/: DynLibDispatcher.hpp  FunctorWrapper.hpp  Indexable.hpp
SudoDEM2D/lib/opengl/: GLUtils.cpp  GLUtils.hpp  OpenGLWrapper.hpp
SudoDEM2D/lib/pyutil/: doc_opts.hpp  gil.cpp  gil.hpp
SudoDEM2D/lib/serialization/: ObjectIO.hpp  RegistrationMacros.hpp  Serializable.cpp  Serializable.hpp
SudoDEM2D/lib/smoothing/: LinearInterpolate.hpp  WeightedAverage2d.hpp
SudoDEM2D/pkg/common/: Aabb.cpp  Aabb.hpp  BoundaryController.hpp  Callbacks.hpp  Collider.cpp  Collider.hpp  Disk.cpp  Disk.hpp  Dispatching.cpp  Dispatching.hpp  ElastMat.cpp  ElastMat.hpp  EngineClasses.cpp  FieldApplier.hpp  ForceEngine.cpp  ForceEngine.hpp  ForceResetter.hpp  GLDrawFunctors.hpp  GravityEngines.cpp  GravityEngines.hpp  InsertionSortCollider.cpp  InsertionSortCollider.hpp  InteractionLoop.cpp  InteractionLoop.hpp  MatchMaker.cpp  MatchMaker.hpp  NormShearPhys.cpp  NormShearPhys.hpp  OpenGLRenderer.cpp  OpenGLRenderer.hpp  ParallelEngine.cpp  ParallelEngine.hpp  PeriodicEngines.hpp  PyRunner.hpp  Recorder.hpp  StepDisplacer.hpp  TorqueEngine.hpp  Wall.cpp  Wall.hpp  common.cpp
SudoDEM2D/pkg/dem/: ElasticContactLaw.cpp  ElasticContactLaw.hpp  FrictPhys.cpp  FrictPhys.hpp  Ig2_Basic_ScGeom.cpp  Ig2_Basic_ScGeom.hpp  NewtonIntegrator.cpp  NewtonIntegrator.hpp  PeriTriaxial.cpp  PeriTriaxial.hpp  ScGeom.cpp  ScGeom.hpp  Shop.hpp  Shop_01.cpp  Superellipse.cpp  Superellipse.hpp  Superellipse_Ig2.cpp  Superellipse_Ig2.hpp
SudoDEM2D/py/: CMakeLists.txt  WeightedAverage2d.cpp  __init__.py.in  _superellipse_utils.cpp  _utils.cpp  geom.py  plot.py  runtime.py  svgobjects.cpp  svgobjects.hpp  system.py  utils.py
SudoDEM2D/py/pack/: _packObb.cpp  _packPredicates.cpp  _packSpheres.cpp
SudoDEM2D/py/tests/: core.py
SudoDEM2D/py/wrapper/: ClassRegistryAll.cpp  customConverters.cpp  sudodemWrapper.cpp
SudoDEM3D/: CMakeLists.txt
SudoDEM3D/cMake/: PackLinuxQt.cmake  PackMacBundle.cmake
SudoDEM3D/core/: Body.hpp  BodyContainer.cpp  BodyContainer.hpp  Bound.cpp  Bound.hpp  Cell.cpp  Cell.hpp  Clump.cpp  Clump.hpp  Dispatcher.hpp  FileGenerator.cpp  ForceContainer.hpp  FrontEnd.hpp  GlobalEngine.hpp  IGeom.cpp  IPhys.cpp  Interaction.cpp  Interaction.hpp  InteractionContainer.hpp  Material.cpp  Material.hpp  Omega.cpp  Omega.hpp  Scene.cpp  Scene.hpp  Shape.cpp  Shape.hpp  SimulationFlow.hpp  State.cpp  State.hpp  ThreadRunner.cpp  ThreadWorker.cpp  TimeStepper.hpp
SudoDEM3D/core/main/: pyboot.cpp  sudodem.cpp
SudoDEM3D/gui/: CMakeLists.txt  Controller.cpp  Controller.hpp  ControllerDisplay.cpp  ControllerResources.qrc  ControllerSignals.cpp  ControllerStyle.cpp  GLViewer.cpp  GLViewer.hpp  GLViewerDisplay.cpp  GLViewerMouse.cpp  OpenGLManager.cpp  OpenGLManager.hpp  SnapshotEngine.cpp  SnapshotEngine.hpp  SudoStyle.hpp  _GLViewer.cpp  __init__.py
SudoDEM3D/gui/qglviewer/: config.h  manipulatedCameraFrame.cpp  manipulatedFrame.cpp  qglviewer.cpp  qglviewer.h  qglwidget_compat.h  saveSnapshot.cpp  ui_VRenderInterface.h
SudoDEM3D/lib/QGLViewer/: qglviewer.h
SudoDEM3D/lib/base/: Logging.hpp  Math.cpp  Math.hpp  PluginMacros.hpp  PreprocessorUtils.hpp  Singleton.cpp  Singleton.hpp  openmp-accu.hpp
SudoDEM3D/lib/factory/: ClassRegistry.cpp  ClassRegistry.hpp  ClassRegistryInstantiation.cpp  Factorable.hpp
SudoDEM3D/lib/multimethods/: DynLibDispatcher.hpp  Indexable.hpp
SudoDEM3D/lib/opengl/: GLUtils.hpp  OpenGLWrapper.hpp
SudoDEM3D/lib/serialization/: Compression.hpp  ObjectIO.hpp  Serializable.cpp  Serializable.hpp
SudoDEM3D/lib/smoothing/: WeightedAverage2d.hpp
SudoDEM3D/pkg/common/: Aabb.cpp  Aabb.hpp  BoundaryController.hpp  Box.cpp  Box.hpp  Callbacks.hpp  Collider.cpp  Collider.hpp  CyIScGeom6D.cpp  CylScGeom6D.hpp  Dispatching.cpp  Dispatching.hpp  Dispatching_PyBind.cpp  ElastMat.cpp  ElastMat.hpp  Facet.cpp  Facet.hpp  FieldApplier.hpp  ForceEngine.cpp  ForceEngine.hpp  ForceResetter.hpp  GLDrawFunctors.hpp  Gl1_NormPhys.cpp  (+27 more)
SudoDEM3D/py/: CMakeLists.txt  __init__.py.in  _fem_utils.cpp  _gjkparticle_utils.cpp  _superquadrics_utils.cpp  _utils.cpp  geom.py  plot.py  runtime.py  system.py  utils.py
minieigen/: CMakeLists.txt  pytest.ini  run_tests.py
minieigen/src/: CMakeLists.txt  common.hpp  converters.hpp  expose-converters.cpp  expose.hpp  minieigen.cpp  test_constructor.cpp  visitors.hpp
minieigen/tests/: README.md  __init__.py  test_complex.py  test_converters.py  test_matrices.py  test_rotation.py  test_setitem.py  test_simple.py  test_utils.py  test_vectors.py
(+109 files in other folders)
